Fixed some layout issues

--- a/src/assets/scss/components/about-us/_about-us.scss
+++ b/src/assets/scss/components/about-us/_about-us.scss
@@ -1,6 +1,10 @@
 .c-about {
   .yoast__breadcrumbs {
-    padding-left: 1.25rem;
+    padding-left: 0.625rem;
+    @media (min-width: 768px) {
+      padding-left: 1.25rem;
+    }
+
     margin-bottom: 1rem;
   }
   &__container {
